# IkegamiDrivingSchoolAvailabilityChecker

./: Cargo.toml  LICENSE  README.md  config.toml  note.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: availability.rs  availability_checker.rs  browser_handler.rs  login_info.rs  main.rs  notifier.rs
