[package]
name = "ikegami_driving_school_availability_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
headless_chrome = { version = "1.0.15", features = ["fetch"] }
tokio = { version = "1.43.0", features = ["full"] }
chrono = "0.4.39"
serenity = "0.12.4"
serde = "1.0.217"
toml = "0.8.19"
